documentation/v1.5/ja/appendix/_messages.rst
=================================
メッセージ情報
=================================

OASE ログイン画面で表示されるメッセージについて説明します。


ログイン画面
============

.. csv-table:: 表 3.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA32029,変更を破棄してパスワードリセットへ移動しますがよろしいですか？
   MOSJA10001,リクエストが不正です。
   MOSJA10002,ログインID、パスワードを入力してください。
   MOSJA10003,ログインIDを入力してください。
   MOSJA10004,パスワードを入力してください。
   MOSJA10005,ログインID、パスワードが正しくありません。入力し直してください。
   MOSJA10006,ログインID、パスワードが正しくありません。入力し直してください。[パスワードをお忘れの場合]をクリックすると再設定できます。
   MOSJA10007,パスワード誤り上限回数に達したため、ユーザをロックしました。しばらくしてから再入力をしてください。
   MOSJA10008,ユーザはロックされています。しばらくしてから再入力をしてください。
   MOSJA10009,ワンタイムパスワードの期限を超過しました。[パスワードをお忘れの場合]をクリックすると再設定できます。
   MOSJA10010,認証に失敗しました。
   MOSJA10011,ログインできませんでした。
   MOSJA10012,ログインID、パスワードが正しくありません。入力し直してください。
   MOSJA10013,ユーザはロックされています。システム管理者にロック解除の依頼をしてください。
   MOSJA10014,認証に失敗しました。
   MOSJA10015,パスワード設定取得に失敗しました。
   MOSJA10016,ご利用されているユーザは存在しないため、ログイン画面に遷移しました。
   MOSJA10017,アカウントロック上限回数に達したため、ユーザをロックしました。ロックを解除したい場合はシステム管理者に解除の依頼をしてください。
   MOSJA10018,ユーザはロックされています。ロックを解除したい場合はシステム管理者に解除の依頼をしてください。



パスワードリセット画面
======================

この計算結果については :numref:`table1` を御覧ください。

.. _example-fig:

.. csv-table:: パスワードリセット画面におけるメッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60
   :name: table1

   MOSJA00003,必須項目が入力されていません。入力してください。
   MOSJA00006,SMTPサーバーの接続情報が設定されていません。OASEインストール時の初期設定をご確認ください。
   MOSJA00007,SMTP認証情報が設定されていません。OASEインストール時の初期設定をご確認ください。
   MOSJA00008,件名が設定されていません。
   MOSJA00009,メール本文が設定されていません。
   MOSJA00010,メールの送信に失敗しました
   MOSJA32008,エラーが発生しました。
   MOSJA32009,不正なリクエストです
   MOSJA32019,DBの更新に失敗しました。
   MOSJA32030,パスワードリセットを中断しますがよろしいですか？
   MOSJA32031,ログインIDが存在しません。再入力してください。
   MOSJA32032,登録されているメールアドレスと一致しません。再入力してください。
   MOSJA32036,パスワードをリセットします。よろしいですか？
   MOSJA32037,パスワードがリセットされました。


パスワード変更画面
==================


.. csv-table:: 表 3.3-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA32006,パスワードを変更します。よろしいですか？
   MOSJA32007,変更されました。
   MOSJA32008,エラーが発生しました。
   MOSJA32009,不正なリクエストです
   MOSJA32010,"\*ユーザが取得できません"
   MOSJA32011,パスワード設定が取得できません
   MOSJA32012,\*既存のパスワードが入力されていません
   MOSJA32013,\*既存のパスワードが一致しません
   MOSJA32014,\*新パスワードが入力されていません
   MOSJA32015,\*大小英文字・数字・記号の全てを含めた8文字以上のパスワードを設定してください
   MOSJA32016,\*新パスワードが一致していません
   MOSJA32018,\*入力されたパスワードは制限されています
   MOSJA32019,DBの更新に失敗しました。
   MOSJA32029,変更を破棄してパスワードリセットへ移動しますがよろしいですか？
   MOSJA32033,入力された情報を破棄します。よろしいですか？



=================================================
3 OASE トークン払い出し画面で表示されるメッセージ
=================================================

| OASE トークン払い出しの画面で表示されるメッセージについて説明します。
| 以下の表はトークン払い出し画面で表示されるメッセージの一覧です。xxxには該当項目に置換されます。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。


.. csv-table:: 表 3.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA37012,トークンが存在しません。権限がある場合は、[新規トークン払い出し]をクリックするとトークンの作成ができます。
   MOSJA37015,トークンの削除に失敗しました。
   MOSJA37016,トークンを削除する権限がありません。トークン詳細画面からグループ別権限を確認してください。
   MOSJA37017,指定のトークンは存在しません。
   MOSJA37018,トークンを削除すると、メッセージ送信時にこのトークンを使用することはできません。削除してもよろしいですか？
   MOSJA37027,トークンの更新に失敗しました。
   MOSJA37028,トークンを更新する権限がありません。トークン詳細画面からグループ別権限を確認してください。
   MOSJA37030,トークンを再表示するにはパスワードを入力してください
   MOSJA37034,グループ権限の値が不正です。再度トークン編集画面から更新してください。
   MOSJA37035,トークンを表示する権限がありません。トークン詳細画面からグループ別権限を確認してください。
   MOSJA37036,パスワードが正しくありません。入力し直してください。
   MOSJA37037,トークンの取得に失敗しました。
   MOSJA37038,トークン払い出しの有効期限には、年月日(%Y/%m/%d %H:%M:%S)を入力してください。
   MOSJA37039,グループ別権限の値が不正です。
   MOSJA37040,必須項目(名前)が入力されていません。入力してください。
   MOSJA37042,トークンを払い出しました。



=========================================
3 OASE グループ画面で表示されるメッセージ
=========================================

| OASE グループの画面で表示されるメッセージについて説明します。
| 以下の表はグループ画面で表示されるメッセージの一覧です。xxxには該当項目に置換されます。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。


.. csv-table:: 表 3.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA23001,グループが存在しません。権限がある場合は、[編集]をクリックするとグループを作成できます。
   MOSJA23007,対象データがありません。
   MOSJA23009,入力情報が破棄されます。よろしいですか？
   MOSJA23010,リセットします。よろしいですか？
   MOSJA23011,必須項目(グループ名)が入力されていません。入力してください。
   MOSJA23012,グループ名は、64byteまたは64文字以内で入力してください。
   MOSJA23013,概要は、4000byteまたは4000文字以内で入力してください。
   MOSJA23014,入力値が正しくありません。入力内容を確認してください。
   MOSJA23015,更新対象のデータがありません。
   MOSJA23016,編集内容を保存します。よろしいですか？
   MOSJA23017,エラーが発生しました。
   MOSJA23018,データ取得に失敗しました。
   MOSJA23019,不正なリクエストです。
   MOSJA23020,他のグループ名と重複しています。修正してください。
   MOSJA23021,DBの更新に失敗しました。
   MOSJA23022,グループが存在しません。Active Directoryでグループ作成をしてください。
   MOSJA23023,xxxのグループは削除が選択されています。所属するグループがなくなったユーザも削除されます。保存してもよろしいですか？
   MOSJA23024,xxxに使用できない文字が含まれています。
   MOSJA23025,グループ名「システム管理者」は変更できません。
   


=======================================================
3 OASE アカウントロックユーザ画面で表示されるメッセージ
=======================================================

| OASE のアカウントロックユーザ画面で表示されるメッセージについて説明します。
| 以下の表はアカウントロックユーザ画面で表示されるメッセージの一覧です。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。

.. csv-table:: 表 3.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA10019,解除してよろしいですか？
   MOSJA10020,解除されました
   MOSJA33002,解除に失敗しました。
   MOSJA33003,エラーが発生しました。
   MOSJA33004,権限がないため解除に失敗しました。システム設定画面のパスワード設定項目にて、メール通知対象となっているかご確認ください。

===============================================
3 OASE 個人設定画面で表示されるメッセージ
===============================================

| OASE 個人設定の画面で表示されるメッセージについて説明します。
| 以下の表は個人設定画面で表示されるメッセージの一覧です。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。

.. csv-table:: 表 3.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA10004,パスワードを入力してください。
   MOSJA31003,メールアドレスを変更します。よろしいですか？
   MOSJA31006,メールアドレスが不正です。修正してください。
   MOSJA31007,他のメールアドレスと重複しています。修正してください。
   MOSJA31008,現在のメールアドレスが入力されています。修正してください。
   MOSJA31009,不正なリクエストです。
   MOSJA31010,メールアドレスの変更に失敗しました。
   MOSJA31011,他のユーザーが既に使用しているメールアドレスのため、変更に失敗しました。
   MOSJA31012,既にメールアドレスの変更が完了しています。
   MOSJA31013,メールアドレスを変更しました。
   MOSJA31014,メールアドレスの変更申請に失敗しました。
   MOSJA31015,メールアドレスの変更確定に失敗しました。
   MOSJA31016,メールアドレス変更の有効期限を過ぎています。
   MOSJA31017,メールアドレスの変更を承りました。入力されましたメールアドレスに通知が届きます。そちらに記載されたURLへアクセスすることで、メールアドレスの変更が確定されます。
   MOSJA31018,メールアドレスに使用できない文字が含まれています。
   MOSJA31024,メールアドレスを変更するにはパスワードが必要です。
   MOSJA31026,8文字以上64文字以内で入力してください。
   MOSJA31027,変更すると、新しいメールアドレスに認証メールが届きます。
   MOSJA31030,パスワードを変更します。
   MOSJA31033,"半角英字(大文字)、半角英字(小文字)、半角数字、記号(!#$%%&()*+,-./;<=>?@\[]^_{}|~)を含む"
   MOSJA31040,変更されました。
   MOSJA32008,エラーが発生しました。
   MOSJA32010,\*ユーザが取得できません。
   MOSJA32038,パスワードが一致しません。



=============================================
4 OASE システム設定画面で表示されるメッセージ
=============================================

| OASE システム設定の画面で表示されるメッセージについて説明します。
| 以下の表はシステム設定画面で表示されるメッセージの一覧です。xxxには該当項目に置換されます。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。


.. csv-table:: 表 4.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA22000, 更新します。よろしいですか？
   MOSJA22007, xxxは64byteまたは64文字以内で入力してください。
   MOSJA22013, 更新対象のデータがありません。
   MOSJA22014, 不正なリクエストです。
   MOSJA22015, DBの更新に失敗しました。
   MOSJA22016, データの取得に失敗しました。
   MOSJA22018, 保存されました。
   MOSJA22019, エラーが発生しました。
   MOSJA22024, 対象グループリストの属性値が重複しています。 xxx
   MOSJA22026, AD連携解除を行います。ADから取得したグループ・ユーザ情報が全て削除されます。よろしいですか？
   MOSJA22030, AD連携タイマーの設定に失敗しました。
   MOSJA22031, メール通知種別を選択してください。
   MOSJA22033, AD連携解除を行っています。
   MOSJA22034, 処理が終了しました。
   MOSJA22036, 存在しないログインIDが入力されています。xxx 修正してください。
   MOSJA22037, 初回AD連携処理を行っています。処理が完了するまで、ブラウザを閉じたり、別ページに移動しないでください
   MOSJA22038, AD連携解除に失敗しました。
   MOSJA22039, 初回AD連携に失敗しました。設定情報と接続先に問題がないか確認してください。
   MOSJA22040, AD連携設定を行います。現在登録中のグループ・ユーザ情報が全て削除され、ADから取得したグループ・ユーザを設定します。よろしいですか？
   MOSJA22041, AD連携設定中です。
   MOSJA22042, AD連携を中断しました。
   MOSJA22043, 入力情報が破棄されます。よろしいですか？

===============================================
4 OASE ブラックリスト画面で表示されるメッセージ
===============================================

| OASE ブラックリストの画面で表示されるメッセージについて説明します。
| 以下の表はブラックリスト画面で表示されるメッセージの一覧です。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。

.. csv-table:: 表 4.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA00001,変更が破棄されますがよろしいですか？保存していない情報がある場合は、[キャンセル]をクリックし、[保存]をしてください。
   MOSJA00011,保存されました。
   MOSJA24001,データ取得に失敗しました。
   MOSJA34000,ブラックリストに登録されているIPアドレスが存在しません。[編集]をクリックすると、ブラックリストに設定したいIPアドレスを登録することができます。
   MOSJA34001,入力情報が破棄されます。よろしいですか？
   MOSJA34002,必須項目(IPアドレス)が入力されていません。入力してください。
   MOSJA34003,IPアドレスが不正です。修正してください。
   MOSJA34004,入力値が正しくありません。入力内容を確認してください。
   MOSJA34005,対象データがありません。
   MOSJA34006,IPアドレスが重複しています。別のIPアドレスを指定してください。手動登録済IPアドレス再設定の場合は既存設定を有効にしてください。
   MOSJA34007,更新対象のレコードは既に削除されています。
   MOSJA34008,自動登録されたIPアドレスと重複しています。別のIPアドレスを指定してください。
   MOSJA34009,手動登録済のIPアドレスと重複しています。別のIPアドレスを指定してください。
   MOSJA34010,無効にするIPアドレスが編集されています。無効にするレコードのIPアドレスは編集しないでください。


===============================================
4 OASE ホワイトリスト画面で表示されるメッセージ
===============================================

| OASE のホワイトリスト画面で表示されるメッセージについて説明します。
| 以下の表はホワイトリスト画面で表示されるメッセージの一覧です。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。

.. csv-table:: 表 4.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA00001,変更が破棄されますがよろしいですか？保存していない情報がある場合は、[キャンセル]をクリックし、[保存]をしてください。
   MOSJA00002,保存してよろしいですか？
   MOSJA00011,保存されました。
   MOSJA35000,ホワイトリストに登録されているIPアドレスが存在しません。[編集]をクリックすると、ホワイトリストに設定したいIPアドレスを登録することができます。
   MOSJA35001,データ取得に失敗しました。
   MOSJA35002,入力情報が破棄されます。よろしいですか？
   MOSJA35003,必須項目(IPアドレス)が入力されていません。入力してください。
   MOSJA35004,他のIPアドレスと重複しています。修正してください。
   MOSJA35005,IPアドレスが不正です。修正してください。
   MOSJA35006,入力値が正しくありません。入力内容を確認してください。
   MOSJA35007,対象データがありません。



======================================================
4 OASE ディシジョンテーブル画面で表示されるメッセージ
======================================================

| OASE ディシジョンテーブルの画面で表示されるメッセージについて説明します。
| 以下の表はディシジョンテーブル画面で表示されるメッセージの一覧です。xxxには該当項目に置換されます。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。

.. csv-table:: 表 4.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA00002,保存してよろしいですか？
   MOSJA00003,必須項目が入力されていません。入力してください。
   MOSJA00005,入力値が正しくありません。入力内容を確認してください。
   MOSJA00015,必須項目が選択されていません。選択してください。
   MOSJA03001,不正なリクエストです
   MOSJA03301,指定のルール種別IDは存在しません
   MOSJA03501,DTExcelの作成に失敗しました
   MOSJA03502,DT作成中にエラーが発生しました。
   MOSJA03607,Kieコンテナの削除に失敗しました。
   MOSJA11000,ディシジョンテーブルが存在しません。権限がある場合は、[新規追加]をクリックするとディシジョンテーブルを作成できます。
   MOSJA11009,他の行と重複しています。修正してください。
   MOSJA11010,不正なリクエストです。
   MOSJA11011,入力値が正しくありません。入力内容を確認してください。
   MOSJA11012,編集内容を保存します。よろしいですか？
   MOSJA11013,データ取得に失敗しました。
   MOSJA11014,xxxのディシジョンテーブルが削除されますがよろしいですか？削除しない場合は、[キャンセル]をクリックしてください。
   MOSJA11017,予期せぬエラーが発生しました。
   MOSJA11018,ルール条件を追加してください。
   MOSJA11020,xxxはRuleTable名で使用できません。
   MOSJA11021,条件名は、32文字以内で入力してください。受信するリクエストの条件に合致した条件名を入力してください。条件に対し、複数の条件式を紐付たい場合は、同一の条件名を設定してください。記号を使用することはできません。
   MOSJA11022,xxxの権限がありません。ディシジョンテーブルの一覧に本ルールが表示されていることをご確認ください。
   MOSJA13019,"条件名が重複しています。重複して指定する場合は以下の組合せで条件式を選択してください。1.[等しい(数値),等しくない(数値),より大きい,より小さい,以上,以下]2.[等しい(文字列),等しくない(文字列),正規表現に一致する,正規表現に一致しない,時間]3.[含む,含まない]"



=========================================
5 OASE ルール画面で表示されるメッセージ
=========================================

| OASE ルールの画面で表示されるメッセージについて説明します。
| 以下の表はルール画面で表示されるメッセージの一覧です。xxxには該当項目に置換されます。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。


.. csv-table:: 表 5.1-1 メッセージ一覧(画面)
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA03001,不正なリクエストです
   MOSJA03002,アップロードが完了しました
   MOSJA03003,適用処理が完了しました
   MOSJA03004,ファイルが指定されていません
   MOSJA03005,指定のファイルは Excel ではありません
   MOSJA03006,ファイルサイズが xxxMB を超過しています
   MOSJA03007,アップロードに失敗しました。
   MOSJA03008,切り戻しに失敗しました
   MOSJA03009,適用に失敗しました
   MOSJA03010,該当ルールが存在しません
   MOSJA03011,ルール種別が存在しません
   MOSJA03012,ステージング以外に適用されています
   MOSJA03013,該当ルールファイルが存在しません
   MOSJA03014,ステージングでのリクエストテスト実行を完了していません
   MOSJA03015,一括テストリクエストの送信が完了しました
   MOSJA03016,データの取得に失敗しました。しばらく経ってからもう一度お試しください。
   MOSJA03101,アップロード処理開始時データ登録に失敗しました
   MOSJA03102,kjar構築用ファイルが存在しません
   MOSJA03104,kjar構築用ファイルなし時のデータ登録に失敗しました
   MOSJA03123,リクエスト数が上限を超えています。（上限数= xxx）上限に収まるように記述してください。
   MOSJA03201,既にプロダクション環境へ適用済みです
   MOSJA03202,不明なリクエスト種別が指定されました
   MOSJA03204,適用処理が失敗しました
   MOSJA03208,Decision Managerコンテナの作成に失敗しました。
   MOSJA03209,Decision Managerの接続に失敗しました。 （コンテナ作成）
   MOSJA03210,Decision Managerで予期しないエラーが発生しました。 （コンテナ作成）
   MOSJA03215,Decision Managerコンテナの削除に失敗しました。
   MOSJA03217,Decision Managerで予期しないエラーが発生しました。 （コンテナ削除）
   MOSJA03219,適用プロセスでエラーが発生しました。再度ルールファイルのアップロードをしてください。
   MOSJA03301,指定のルール種別IDは存在しません
   MOSJA03302,指定のルール管理IDは存在しません
   MOSJA03303,指定のルールファイルIDは存在しません
   MOSJA03304,指定のファイルは存在しません
   MOSJA03401,ビルド処理開始時データ更新に失敗しました
   MOSJA03402,ビルド後データ更新に失敗しました
   MOSJA03403,ビルド処理が失敗しました
   MOSJA12000,データの取得に失敗しました。
   MOSJA12001,エラーが発生しました。
   MOSJA12002,不正なリクエストです。
   MOSJA12007,ステージング実行をリクエストしました。
   MOSJA12008,運用ステータスを更新しました。
   MOSJA12009,ルールが存在しません。
   MOSJA12010,運用ステータスを更新できません。
   MOSJA12011,プロダクション適用済みのため、運用ステータスを更新できません
   MOSJA12012,テストリクエストが実行できませんでした.
   MOSJA12014,必須項目が入力されていません。入力をしてから、再度アップロードしてください cell=xxx
   MOSJA12015,xxxには、半角数字を入力してください cell=xxx
   MOSJA12016,時刻条件には、時刻(HH:mm)を入力してください cell=xxx
   MOSJA12017,イベント発生日時には、年月日(%%Y-%%m-%%d %%H:%%M:%%S)を入力してください cell=xxx
   MOSJA12018,フォーマットチェックに失敗しました。ファイルの記載内容を修正してから、再度アップロードしてください。
   MOSJA12019,空ファイルです。必須項目を入力してから再度アップロードしてください。 filename=xxx
   MOSJA12021,xxxには、[\\"hoge\\"]のような形式で入力してください。cell=xxx
   MOSJA12022,イベント発生日時には、年月日(%Y-%m-%d %H:%M:%S)を入力してください。
   MOSJA12023,フォーマットチェックに失敗しました。下記のエラー内容を確認してください。
   MOSJA12024,テストリクエストの送信が完了しました。
   MOSJA12025,xxxには、半角数字を入力してください。条件名: xxx
   MOSJA12026,時刻条件には、時刻(HH:mm)を入力してください。条件名: xxx
   MOSJA12027,xxxには、[\\"hoge\\"]のような形式で入力してください。条件名: xxx
   MOSJA12028,xxxに使用できない文字が使われています。 cell=xxx
   MOSJA12029,xxxに使用できない文字が使われています。条件名: xxx
   MOSJA12030,必須項目が入力されていません。 条件名: xxx
   MOSJA12031,xxxの権限がありません。ディシジョンテーブル画面から該当ルールの権限をご確認ください。rule_type_name=xxx
   MOSJA12032,ルールのマッチングは正常に行われましたが、ドライバー情報の取得に失敗しました。ドライバーのインストール状態をご確認のうえ、再度テストリクエストを試みてください。
   MOSJA32010,\*ユーザが取得できません

.. csv-table:: 表 5.1-2 メッセージ一覧(ファイル)
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA03102,kjar構築用ファイルが存在しません
   MOSJA03104,kjar構築用ファイルなし時のデータ登録に失敗しました
   MOSJA03106,ルールファイルのアップロードに失敗しました。ディシジョンテーブル画面にて登録されているかご確認のうえ、再度ルールファイルのアップロードをしてください。
   MOSJA03121,フォーマットエラーです。エラー内容を確認し、修正したものを再度アップロードしてください。
   MOSJA03201,既にプロダクション環境へ適用済みです
   MOSJA03206,要求タイプが不明です。 reqtypeid =xxx
   MOSJA03208,Decision Managerコンテナの作成に失敗しました。
   MOSJA03209,Decision Managerの接続に失敗しました。 （コンテナ作成）
   MOSJA03210,Decision Managerで予期しないエラーが発生しました。 （コンテナ作成）
   MOSJA03215,Decision Managerコンテナの削除に失敗しました。
   MOSJA03216,Decision Managerの接続に失敗しました。 （コンテナ削除）
   MOSJA03217,Decision Managerで予期しないエラーが発生しました。 （コンテナ削除）
   MOSJA03218,指定されたルール管理IDが存在しません。 manage_id =xxx ディシジョンテーブル画面やルール画面に削除対象のルール情報が表示されていることをご確認ください。表示されていない場合は削除済です。
   MOSJA03219,適用プロセスでエラーが発生しました。再度ルールファイルのアップロードをしてください。
   MOSJA03404,ビルド処理開始時データ更新に失敗しました。しばらく経ってからもう一度お試しください。
   MOSJA03405,ビルド後データ更新に失敗しました。しばらく経ってからもう一度お試しください。
   MOSJA03406,アップロードされたファイルでkjarを構築できませんでした。しばらく経ってからもう一度お試しください。

