documentation/v1.6/ja/appendix/_messages.rst
=================================
メッセージ情報
=================================

Exastro OASE ログイン画面で表示されるメッセージについて説明します。


ログイン画面
============

.. csv-table:: 表 3.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA32029,変更を破棄してパスワードリセットへ移動しますがよろしいですか？
   MOSJA10001,リクエストが不正です。
   MOSJA10002,ログインID、パスワードを入力してください。
   MOSJA10003,ログインIDを入力してください。
   MOSJA10004,パスワードを入力してください。
   MOSJA10005,ログインID、パスワードが正しくありません。入力し直してください。
   MOSJA10006,ログインID、パスワードが正しくありません。入力し直してください。[パスワードをお忘れの場合]をクリックすると再設定できます。
   MOSJA10007,パスワード誤り上限回数に達したため、ユーザをロックしました。しばらくしてから再入力をしてください。
   MOSJA10008,ユーザはロックされています。しばらくしてから再入力をしてください。
   MOSJA10009,ワンタイムパスワードの期限を超過しました。[パスワードをお忘れの場合]をクリックすると再設定できます。
   MOSJA10010,認証に失敗しました。
   MOSJA10011,ログインできませんでした。
   MOSJA10012,ログインID、パスワードが正しくありません。入力し直してください。
   MOSJA10013,ユーザはロックされています。システム管理者にロック解除の依頼をしてください。
   MOSJA10014,認証に失敗しました。
   MOSJA10015,パスワード設定取得に失敗しました。
   MOSJA10016,ご利用されているユーザは存在しないため、ログイン画面に遷移しました。
   MOSJA10017,アカウントロック上限回数に達したため、ユーザをロックしました。ロックを解除したい場合はシステム管理者に解除の依頼をしてください。
   MOSJA10018,ユーザはロックされています。ロックを解除したい場合はシステム管理者に解除の依頼をしてください。



パスワードリセット画面
======================

この計算結果については :numref:`table1` を御覧ください。

.. _example-fig:

.. csv-table:: パスワードリセット画面におけるメッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60
   :name: table1

   MOSJA00003,必須項目が入力されていません。入力してください。
   MOSJA00006,SMTPサーバーの接続情報が設定されていません。OASEインストール時の初期設定をご確認ください。
   MOSJA00007,SMTP認証情報が設定されていません。OASEインストール時の初期設定をご確認ください。
   MOSJA00008,件名が設定されていません。
   MOSJA00009,メール本文が設定されていません。
   MOSJA00010,メールの送信に失敗しました
   MOSJA32008,エラーが発生しました。
   MOSJA32009,不正なリクエストです
   MOSJA32019,DBの更新に失敗しました。
   MOSJA32030,パスワードリセットを中断しますがよろしいですか？
   MOSJA32031,ログインIDが存在しません。再入力してください。
   MOSJA32032,登録されているメールアドレスと一致しません。再入力してください。
   MOSJA32036,パスワードをリセットします。よろしいですか？
   MOSJA32037,パスワードがリセットされました。


パスワード変更画面
==================


.. csv-table:: 表 3.3-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA32006,パスワードを変更します。よろしいですか？
   MOSJA32007,変更されました。
   MOSJA32008,エラーが発生しました。
   MOSJA32009,不正なリクエストです
   MOSJA32010,"\*ユーザが取得できません"
   MOSJA32011,パスワード設定が取得できません
   MOSJA32012,\*既存のパスワードが入力されていません
   MOSJA32013,\*既存のパスワードが一致しません
   MOSJA32014,\*新パスワードが入力されていません
   MOSJA32015,\*大小英文字・数字・記号の全てを含めた8文字以上のパスワードを設定してください
   MOSJA32016,\*新パスワードが一致していません
   MOSJA32018,\*入力されたパスワードは制限されています
   MOSJA32019,DBの更新に失敗しました。
   MOSJA32029,変更を破棄してパスワードリセットへ移動しますがよろしいですか？
   MOSJA32033,入力された情報を破棄します。よろしいですか？



=================================================
3 OASE トークン払い出し画面で表示されるメッセージ
=================================================

| OASE トークン払い出しの画面で表示されるメッセージについて説明します。
| 以下の表はトークン払い出し画面で表示されるメッセージの一覧です。xxxには該当項目に置換されます。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。


.. csv-table:: 表 3.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA37012,トークンが存在しません。権限がある場合は、[新規トークン払い出し]をクリックするとトークンの作成ができます。
   MOSJA37015,トークンの削除に失敗しました。
   MOSJA37016,トークンを削除する権限がありません。トークン詳細画面からグループ別権限を確認してください。
   MOSJA37017,指定のトークンは存在しません。
   MOSJA37018,トークンを削除すると、メッセージ送信時にこのトークンを使用することはできません。削除してもよろしいですか？
   MOSJA37027,トークンの更新に失敗しました。
   MOSJA37028,トークンを更新する権限がありません。トークン詳細画面からグループ別権限を確認してください。
   MOSJA37030,トークンを再表示するにはパスワードを入力してください
   MOSJA37034,グループ権限の値が不正です。再度トークン編集画面から更新してください。
   MOSJA37035,トークンを表示する権限がありません。トークン詳細画面からグループ別権限を確認してください。
   MOSJA37036,パスワードが正しくありません。入力し直してください。
   MOSJA37037,トークンの取得に失敗しました。
   MOSJA37038,トークン払い出しの有効期限には、年月日(%Y/%m/%d %H:%M:%S)を入力してください。
   MOSJA37039,グループ別権限の値が不正です。
   MOSJA37040,必須項目(名前)が入力されていません。入力してください。
   MOSJA37042,トークンを払い出しました。



=========================================
3 OASE グループ画面で表示されるメッセージ
=========================================

| OASE グループの画面で表示されるメッセージについて説明します。
| 以下の表はグループ画面で表示されるメッセージの一覧です。xxxには該当項目に置換されます。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。


.. csv-table:: 表 3.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA23001,グループが存在しません。権限がある場合は、[編集]をクリックするとグループを作成できます。
   MOSJA23007,対象データがありません。
   MOSJA23009,入力情報が破棄されます。よろしいですか？
   MOSJA23010,リセットします。よろしいですか？
   MOSJA23011,必須項目(グループ名)が入力されていません。入力してください。
   MOSJA23012,グループ名は、64byteまたは64文字以内で入力してください。
   MOSJA23013,概要は、4000byteまたは4000文字以内で入力してください。
   MOSJA23014,入力値が正しくありません。入力内容を確認してください。
   MOSJA23015,更新対象のデータがありません。
   MOSJA23016,編集内容を保存します。よろしいですか？
   MOSJA23017,エラーが発生しました。
   MOSJA23018,データ取得に失敗しました。
   MOSJA23019,不正なリクエストです。
   MOSJA23020,他のグループ名と重複しています。修正してください。
   MOSJA23021,DBの更新に失敗しました。
   MOSJA23022,グループが存在しません。Active Directoryでグループ作成をしてください。
   MOSJA23023,xxxのグループは削除が選択されています。所属するグループがなくなったユーザも削除されます。保存してもよろしいですか？
   MOSJA23024,xxxに使用できない文字が含まれています。
   MOSJA23025,グループ名「システム管理者」は変更できません。
   


=======================================================
3 OASE アカウントロックユーザ画面で表示されるメッセージ
=======================================================

| OASE のアカウントロックユーザ画面で表示されるメッセージについて説明します。
| 以下の表はアカウントロックユーザ画面で表示されるメッセージの一覧です。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。

.. csv-table:: 表 3.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA10019,解除してよろしいですか？
   MOSJA10020,解除されました
   MOSJA33002,解除に失敗しました。
   MOSJA33003,エラーが発生しました。
   MOSJA33004,権限がないため解除に失敗しました。システム設定画面のパスワード設定項目にて、メール通知対象となっているかご確認ください。

===============================================
3 OASE 個人設定画面で表示されるメッセージ
===============================================

| OASE 個人設定の画面で表示されるメッセージについて説明します。
| 以下の表は個人設定画面で表示されるメッセージの一覧です。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。

.. csv-table:: 表 3.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA10004,パスワードを入力してください。
   MOSJA31003,メールアドレスを変更します。よろしいですか？
   MOSJA31006,メールアドレスが不正です。修正してください。
   MOSJA31007,他のメールアドレスと重複しています。修正してください。
   MOSJA31008,現在のメールアドレスが入力されています。修正してください。
   MOSJA31009,不正なリクエストです。
   MOSJA31010,メールアドレスの変更に失敗しました。
   MOSJA31011,他のユーザーが既に使用しているメールアドレスのため、変更に失敗しました。
   MOSJA31012,既にメールアドレスの変更が完了しています。
   MOSJA31013,メールアドレスを変更しました。
   MOSJA31014,メールアドレスの変更申請に失敗しました。
   MOSJA31015,メールアドレスの変更確定に失敗しました。
   MOSJA31016,メールアドレス変更の有効期限を過ぎています。
   MOSJA31017,メールアドレスの変更を承りました。入力されましたメールアドレスに通知が届きます。そちらに記載されたURLへアクセスすることで、メールアドレスの変更が確定されます。
   MOSJA31018,メールアドレスに使用できない文字が含まれています。
   MOSJA31024,メールアドレスを変更するにはパスワードが必要です。
   MOSJA31026,8文字以上64文字以内で入力してください。
   MOSJA31027,変更すると、新しいメールアドレスに認証メールが届きます。
   MOSJA31030,パスワードを変更します。
   MOSJA31033,"半角英字(大文字)、半角英字(小文字)、半角数字、記号(!#$%%&()*+,-./;<=>?@\[]^_{}|~)を含む"
   MOSJA31040,変更されました。
   MOSJA32008,エラーが発生しました。
   MOSJA32010,\*ユーザが取得できません。
   MOSJA32038,パスワードが一致しません。



=============================================
4 OASE システム設定画面で表示されるメッセージ
=============================================

| OASE システム設定の画面で表示されるメッセージについて説明します。
| 以下の表はシステム設定画面で表示されるメッセージの一覧です。xxxには該当項目に置換されます。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。


.. csv-table:: 表 4.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA22000, 更新します。よろしいですか？
   MOSJA22007, xxxは64byteまたは64文字以内で入力してください。
   MOSJA22013, 更新対象のデータがありません。
   MOSJA22014, 不正なリクエストです。
   MOSJA22015, DBの更新に失敗しました。
   MOSJA22016, データの取得に失敗しました。
   MOSJA22018, 保存されました。
   MOSJA22019, エラーが発生しました。
   MOSJA22024, 対象グループリストの属性値が重複しています。 xxx
   MOSJA22026, AD連携解除を行います。ADから取得したグループ・ユーザ情報が全て削除されます。よろしいですか？
   MOSJA22030, AD連携タイマーの設定に失敗しました。
   MOSJA22031, メール通知種別を選択してください。
   MOSJA22033, AD連携解除を行っています。
   MOSJA22034, 処理が終了しました。
   MOSJA22036, 存在しないログインIDが入力されています。xxx 修正してください。
   MOSJA22037, 初回AD連携処理を行っています。処理が完了するまで、ブラウザを閉じたり、別ページに移動しないでください
   MOSJA22038, AD連携解除に失敗しました。
   MOSJA22039, 初回AD連携に失敗しました。設定情報と接続先に問題がないか確認してください。
   MOSJA22040, AD連携設定を行います。現在登録中のグループ・ユーザ情報が全て削除され、ADから取得したグループ・ユーザを設定します。よろしいですか？
   MOSJA22041, AD連携設定中です。
   MOSJA22042, AD連携を中断しました。
   MOSJA22043, 入力情報が破棄されます。よろしいですか？

===============================================
4 OASE ブラックリスト画面で表示されるメッセージ
===============================================

| OASE ブラックリストの画面で表示されるメッセージについて説明します。
| 以下の表はブラックリスト画面で表示されるメッセージの一覧です。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。

.. csv-table:: 表 4.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA00001,変更が破棄されますがよろしいですか？保存していない情報がある場合は、[キャンセル]をクリックし、[保存]をしてください。
   MOSJA00011,保存されました。
   MOSJA24001,データ取得に失敗しました。
   MOSJA34000,ブラックリストに登録されているIPアドレスが存在しません。[編集]をクリックすると、ブラックリストに設定したいIPアドレスを登録することができます。
   MOSJA34001,入力情報が破棄されます。よろしいですか？
   MOSJA34002,必須項目(IPアドレス)が入力されていません。入力してください。
   MOSJA34003,IPアドレスが不正です。修正してください。
   MOSJA34004,入力値が正しくありません。入力内容を確認してください。
   MOSJA34005,対象データがありません。
   MOSJA34006,IPアドレスが重複しています。別のIPアドレスを指定してください。手動登録済IPアドレス再設定の場合は既存設定を有効にしてください。
   MOSJA34007,更新対象のレコードは既に削除されています。
   MOSJA34008,自動登録されたIPアドレスと重複しています。別のIPアドレスを指定してください。
   MOSJA34009,手動登録済のIPアドレスと重複しています。別のIPアドレスを指定してください。
   MOSJA34010,無効にするIPアドレスが編集されています。無効にするレコードのIPアドレスは編集しないでください。


===============================================
4 OASE ホワイトリスト画面で表示されるメッセージ
===============================================

| OASE のホワイトリスト画面で表示されるメッセージについて説明します。
| 以下の表はホワイトリスト画面で表示されるメッセージの一覧です。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。

.. csv-table:: 表 4.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA00001,変更が破棄されますがよろしいですか？保存していない情報がある場合は、[キャンセル]をクリックし、[保存]をしてください。
   MOSJA00002,保存してよろしいですか？
   MOSJA00011,保存されました。
   MOSJA35000,ホワイトリストに登録されているIPアドレスが存在しません。[編集]をクリックすると、ホワイトリストに設定したいIPアドレスを登録することができます。
   MOSJA35001,データ取得に失敗しました。
   MOSJA35002,入力情報が破棄されます。よろしいですか？
   MOSJA35003,必須項目(IPアドレス)が入力されていません。入力してください。
   MOSJA35004,他のIPアドレスと重複しています。修正してください。
   MOSJA35005,IPアドレスが不正です。修正してください。
   MOSJA35006,入力値が正しくありません。入力内容を確認してください。
   MOSJA35007,対象データがありません。



======================================================
4 OASE ディシジョンテーブル画面で表示されるメッセージ
======================================================

| OASE ディシジョンテーブルの画面で表示されるメッセージについて説明します。
| 以下の表はディシジョンテーブル画面で表示されるメッセージの一覧です。xxxには該当項目に置換されます。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。

.. csv-table:: 表 4.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA00002,保存してよろしいですか？
   MOSJA00003,必須項目が入力されていません。入力してください。
   MOSJA00005,入力値が正しくありません。入力内容を確認してください。
   MOSJA00015,必須項目が選択されていません。選択してください。
   MOSJA03001,不正なリクエストです
   MOSJA03301,指定のルール種別IDは存在しません
   MOSJA03501,DTExcelの作成に失敗しました
   MOSJA03502,DT作成中にエラーが発生しました。
   MOSJA03607,Kieコンテナの削除に失敗しました。
   MOSJA11000,ディシジョンテーブルが存在しません。権限がある場合は、[新規追加]をクリックするとディシジョンテーブルを作成できます。
   MOSJA11009,他の行と重複しています。修正してください。
   MOSJA11010,不正なリクエストです。
   MOSJA11011,入力値が正しくありません。入力内容を確認してください。
   MOSJA11012,編集内容を保存します。よろしいですか？
   MOSJA11013,データ取得に失敗しました。
   MOSJA11014,xxxのディシジョンテーブルが削除されますがよろしいですか？削除しない場合は、[キャンセル]をクリックしてください。
   MOSJA11017,予期せぬエラーが発生しました。
   MOSJA11018,ルール条件を追加してください。
   MOSJA11020,xxxはRuleTable名で使用できません。
   MOSJA11021,条件名は、32文字以内で入力してください。受信するリクエストの条件に合致した条件名を入力してください。条件に対し、複数の条件式を紐付たい場合は、同一の条件名を設定してください。記号を使用することはできません。
   MOSJA11022,xxxの権限がありません。ディシジョンテーブルの一覧に本ルールが表示されていることをご確認ください。
   MOSJA13019,"条件名が重複しています。重複して指定する場合は以下の組合せで条件式を選択してください。1.[等しい(数値),等しくない(数値),より大きい,より小さい,以上,以下]2.[等しい(文字列),等しくない(文字列),正規表現に一致する,正規表現に一致しない,時間]3.[含む,含まない]"



=========================================
5 OASE ルール画面で表示されるメッセージ
=========================================

| OASE ルールの画面で表示されるメッセージについて説明します。
| 以下の表はルール画面で表示されるメッセージの一覧です。xxxには該当項目に置換されます。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。


.. csv-table:: 表 5.1-1 メッセージ一覧(画面)
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA03001,不正なリクエストです
   MOSJA03002,アップロードが完了しました
   MOSJA03003,適用処理が完了しました
   MOSJA03004,ファイルが指定されていません
   MOSJA03005,指定のファイルは Excel ではありません
   MOSJA03006,ファイルサイズが xxxMB を超過しています
   MOSJA03007,アップロードに失敗しました。
   MOSJA03008,切り戻しに失敗しました
   MOSJA03009,適用に失敗しました
   MOSJA03010,該当ルールが存在しません
   MOSJA03011,ルール種別が存在しません
   MOSJA03012,ステージング以外に適用されています
   MOSJA03013,該当ルールファイルが存在しません
   MOSJA03014,ステージングでのリクエストテスト実行を完了していません
   MOSJA03015,一括テストリクエストの送信が完了しました
   MOSJA03016,データの取得に失敗しました。しばらく経ってからもう一度お試しください。
   MOSJA03101,アップロード処理開始時データ登録に失敗しました
   MOSJA03102,kjar構築用ファイルが存在しません
   MOSJA03104,kjar構築用ファイルなし時のデータ登録に失敗しました
   MOSJA03123,リクエスト数が上限を超えています。（上限数= xxx）上限に収まるように記述してください。
   MOSJA03201,既にプロダクション環境へ適用済みです
   MOSJA03202,不明なリクエスト種別が指定されました
   MOSJA03204,適用処理が失敗しました
   MOSJA03208,Decision Managerコンテナの作成に失敗しました。
   MOSJA03209,Decision Managerの接続に失敗しました。 （コンテナ作成）
   MOSJA03210,Decision Managerで予期しないエラーが発生しました。 （コンテナ作成）
   MOSJA03215,Decision Managerコンテナの削除に失敗しました。
   MOSJA03217,Decision Managerで予期しないエラーが発生しました。 （コンテナ削除）
   MOSJA03219,適用プロセスでエラーが発生しました。再度ルールファイルのアップロードをしてください。
   MOSJA03301,指定のルール種別IDは存在しません
   MOSJA03302,指定のルール管理IDは存在しません
   MOSJA03303,指定のルールファイルIDは存在しません
   MOSJA03304,指定のファイルは存在しません
   MOSJA03401,ビルド処理開始時データ更新に失敗しました
   MOSJA03402,ビルド後データ更新に失敗しました
   MOSJA03403,ビルド処理が失敗しました
   MOSJA12000,データの取得に失敗しました。
   MOSJA12001,エラーが発生しました。
   MOSJA12002,不正なリクエストです。
   MOSJA12007,ステージング実行をリクエストしました。
   MOSJA12008,運用ステータスを更新しました。
   MOSJA12009,ルールが存在しません。
   MOSJA12010,運用ステータスを更新できません。
   MOSJA12011,プロダクション適用済みのため、運用ステータスを更新できません
   MOSJA12012,テストリクエストが実行できませんでした.
   MOSJA12014,必須項目が入力されていません。入力をしてから、再度アップロードしてください cell=xxx
   MOSJA12015,xxxには、半角数字を入力してください cell=xxx
   MOSJA12016,時刻条件には、時刻(HH:mm)を入力してください cell=xxx
   MOSJA12017,イベント発生日時には、年月日(%%Y-%%m-%%d %%H:%%M:%%S)を入力してください cell=xxx
   MOSJA12018,フォーマットチェックに失敗しました。ファイルの記載内容を修正してから、再度アップロードしてください。
   MOSJA12019,空ファイルです。必須項目を入力してから再度アップロードしてください。 filename=xxx
   MOSJA12021,xxxには、[\\"hoge\\"]のような形式で入力してください。cell=xxx
   MOSJA12022,イベント発生日時には、年月日(%Y-%m-%d %H:%M:%S)を入力してください。
   MOSJA12023,フォーマットチェックに失敗しました。下記のエラー内容を確認してください。
   MOSJA12024,テストリクエストの送信が完了しました。
   MOSJA12025,xxxには、半角数字を入力してください。条件名: xxx
   MOSJA12026,時刻条件には、時刻(HH:mm)を入力してください。条件名: xxx
   MOSJA12027,xxxには、[\\"hoge\\"]のような形式で入力してください。条件名: xxx
   MOSJA12028,xxxに使用できない文字が使われています。 cell=xxx
   MOSJA12029,xxxに使用できない文字が使われています。条件名: xxx
   MOSJA12030,必須項目が入力されていません。 条件名: xxx
   MOSJA12031,xxxの権限がありません。ディシジョンテーブル画面から該当ルールの権限をご確認ください。rule_type_name=xxx
   MOSJA12032,ルールのマッチングは正常に行われましたが、ドライバー情報の取得に失敗しました。ドライバーのインストール状態をご確認のうえ、再度テストリクエストを試みてください。
   MOSJA32010,\*ユーザが取得できません

.. csv-table:: 表 5.1-2 メッセージ一覧(ファイル)
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA03102,kjar構築用ファイルが存在しません
   MOSJA03104,kjar構築用ファイルなし時のデータ登録に失敗しました
   MOSJA03106,ルールファイルのアップロードに失敗しました。ディシジョンテーブル画面にて登録されているかご確認のうえ、再度ルールファイルのアップロードをしてください。
   MOSJA03121,フォーマットエラーです。エラー内容を確認し、修正したものを再度アップロードしてください。
   MOSJA03201,既にプロダクション環境へ適用済みです
   MOSJA03206,要求タイプが不明です。 reqtypeid =xxx
   MOSJA03208,Decision Managerコンテナの作成に失敗しました。
   MOSJA03209,Decision Managerの接続に失敗しました。 （コンテナ作成）
   MOSJA03210,Decision Managerで予期しないエラーが発生しました。 （コンテナ作成）
   MOSJA03215,Decision Managerコンテナの削除に失敗しました。
   MOSJA03216,Decision Managerの接続に失敗しました。 （コンテナ削除）
   MOSJA03217,Decision Managerで予期しないエラーが発生しました。 （コンテナ削除）
   MOSJA03218,指定されたルール管理IDが存在しません。 manage_id =xxx ディシジョンテーブル画面やルール画面に削除対象のルール情報が表示されていることをご確認ください。表示されていない場合は削除済です。
   MOSJA03219,適用プロセスでエラーが発生しました。再度ルールファイルのアップロードをしてください。
   MOSJA03404,ビルド処理開始時データ更新に失敗しました。しばらく経ってからもう一度お試しください。
   MOSJA03405,ビルド後データ更新に失敗しました。しばらく経ってからもう一度お試しください。
   MOSJA03406,アップロードされたファイルでkjarを構築できませんでした。しばらく経ってからもう一度お試しください。

===============================================
3 OASE 監視アダプタ画面で表示されるメッセージ
===============================================

| 本章では、OASE 監視アダプタの画面で表示されるメッセージについて説明します。
| 以下の表は監視アダプタ画面で表示されるメッセージの一覧です。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。


.. csv-table:: 表 3.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA00002,保存してよろしいですか？
   MOSJA23014,入力値が正しくありません。入力内容を確認してください。
   MOSJA26001,保存されました。
   MOSJA26002,入力値が不正です。
   MOSJA26003,エラーが発生しました。
   MOSJA26007,アダプタがインストールされていません。アダプタをインストールすると監視情報が表示されます。
   MOSJA26008,データ取得に失敗しました。
   MOSJA26009,不正なリクエストです。
   MOSJA26010,DBの更新に失敗しました。
   MOSJA26101,データの削除に失敗しました。
   MOSJA26102,必須項目(名前)が入力されていません。入力してください。
   MOSJA26103,名前は64文字以内で入力してください。
   MOSJA26104,名前に使用できない文字が含まれています。
   MOSJA26105,必須項目(プロトコル)が入力されていません。入力してください。
   MOSJA26106,プロトコルは64文字以内で入力してください。
   MOSJA26107,必須項目(ホスト名)が入力されていません。入力してください。
   MOSJA26108,ホスト名は128文字以内で入力してください。
   MOSJA26109,ホスト名に使用できない文字が含まれています。
   MOSJA26110,必須項目(ポート)が入力されていません。入力してください。
   MOSJA26111,ポートは、0～65535までの数値を入力してください。
   MOSJA26112,必須項目(ユーザ名)が入力されていません。入力してください。
   MOSJA26113,ユーザ名は64文字以内で入力してください。
   MOSJA26114,ユーザ名に使用できない文字が含まれています。
   MOSJA26115,必須項目(パスワード)が入力されていません。入力してください。
   MOSJA26116,パスワードは64文字以内で入力してください。
   MOSJA26117,パスワードに使用できない文字が含まれています。
   MOSJA26118,必須項目(ディシジョンテーブル名)が選択されていません。選択してください。
   MOSJA26119,ディシジョンテーブル名が存在しません。ディシジョンテーブル画面からファイルをダウンロードし、ルールの設定を行ってください。
   MOSJA26121,保存されている条件名の数と入力されたZabbix項目の数が違います。もう一度お試しください。
   MOSJA26122,必須項目(Zabbix項目)が入力されていません。入力してください。
   MOSJA26123,Zabbix項目に使用できない文字が含まれています。
   MOSJA26124,他のZABBIXアダプタ名と重複しています。修正してください。
   MOSJA26125,ホスト名とディシジョンテーブル名の組み合わせが重複しています。ホスト名、またはディシジョンテーブル名を変更してください。
   MOSJA26126,ZABBIXの疎通確認に失敗しました。
   MOSJA26127,データは既に削除されています。
   MOSJA26128,Zabbix項目は32文字以内で入力してください。
   MOSJA26142,ルールが削除されています。ルールを選び直してください。
   MOSJA26143,監視先が設定されていません。権限がある場合は、[監視先の追加]をクリックすると設定編集できます。
   MOSJA26144,条件に対応させるZabbix項目名を入力してください。
   MOSJA26145,編集内容を保存します。よろしいですか？
   MOSJA26146,削除すると設定されている監視基盤へのメッセージ取得を行わなくなります。保存してもよろしいですか？
   MOSJA26147,Zabbix項目に設定されていない文字が指定されています。
   MOSJA26213,監視先が設定されていません。権限がある場合は、[監視先の追加]をクリックすると設定編集できます。
   MOSJA26214,条件に対応させるPrometheus項目名を入力してください。
   MOSJA26215,必須項目(ディシジョンテーブル名)が選択されていません。選択してください。
   MOSJA26216,編集内容を保存します。よろしいですか？
   MOSJA26217,他のPrometheusアダプタ名と重複しています。修正してください。
   MOSJA26218,URIとディシジョンテーブル名の組み合わせが重複しています。URI、またはディシジョンテーブル名を変更してください。
   MOSJA26219,データは既に削除されています。
   MOSJA26220,データの削除に失敗しました。
   MOSJA26221,必須項目(名前)が入力されていません。入力してください。
   MOSJA26222,名前は64文字以内で入力してください。
   MOSJA26223,名前に使用できない文字が含まれています。
   MOSJA26224,必須項目(URI)が入力されていません。入力してください。
   MOSJA26225,URIは512文字以内で入力してください。
   MOSJA26226,URIに使用できない文字が含まれています。
   MOSJA26233,ディシジョンテーブル名が存在しません。ディシジョンテーブル画面からファイルをダウンロードし、ルールの設定を行ってください。
   MOSJA26236,必須項目(Prometheus項目)が入力されていません。入力してください。
   MOSJA26237,Prometheus項目に使用できない文字が含まれています。
   MOSJA26238,Prometheus項目は128文字以内で入力してください。
   MOSJA26239,削除すると設定されている監視基盤へのメッセージ取得を行わなくなります。保存してもよろしいですか？
   MOSJA26242,クエリは128文字以内で入力してください。
   MOSJA26243,クエリに使用できない文字が含まれています。
   MOSJA26247,必須項目(イベント発生日時)が入力されていません。入力してください。
   MOSJA26248,イベント発生日時は128文字以内で入力してください。
   MOSJA26249,イベント発生日時に使用できない文字が含まれています。
   MOSJA26250,必須項目(インスタンス情報)が入力されていません。入力してください。
   MOSJA26251,インスタンス情報は128文字以内で入力してください。
   MOSJA26252,インスタンス情報に使用できない文字が含まれています。
   MOSJA26305,ルールが削除されています。ルールを選び直してください。
   MOSJA26306,監視先が設定されていません。権限がある場合は、[監視先の追加]をクリックすると設定編集できます。
   MOSJA26315,他のGrafanaアダプタ名と重複しています。修正してください。
   MOSJA26316,URIとディシジョンテーブル名の組み合わせが重複しています。URI、またはディシジョンテーブル名を変更してください。
   MOSJA26317,条件に対応させるGrafana項目名を入力してください。
   MOSJA26321,パスワードは64文字以内で入力してください。
   MOSJA26322,ユーザ名は64文字以内で入力してください。
   MOSJA26323,必須項目(ディシジョンテーブル名)が選択されていません。選択してください。
   MOSJA26324,編集内容を保存します。よろしいですか？
   MOSJA26325,削除すると設定されている監視基盤へのメッセージ取得を行わなくなります。保存してもよろしいですか？
   MOSJA26326,データは既に削除されています。
   MOSJA26327,データの削除に失敗しました。
   MOSJA26328,必須項目(名前)が入力されていません。入力してください。
   MOSJA26329,名前は64文字以内で入力してください。
   MOSJA26330,名前に使用できない文字が含まれています。
   MOSJA26331,必須項目(URI)が入力されていません。入力してください。
   MOSJA26332,URIは512文字以内で入力してください。
   MOSJA26333,URIに使用できない文字が含まれています。
   MOSJA26334,必須項目(ユーザ名)が入力されていません。入力してください。
   MOSJA26335,ユーザ名は64文字以内で入力してください。
   MOSJA26336,ユーザ名に使用できない文字が含まれています。
   MOSJA26337,必須項目(パスワード)が入力されていません。入力してください。
   MOSJA26338,パスワードは64文字以内で入力してください。
   MOSJA26339,パスワードに使用できない文字が含まれています。
   MOSJA26340,ディシジョンテーブル名が存在しません。ディシジョンテーブル画面からファイルをダウンロードし、ルールの設定を行ってください。
   MOSJA26341,必須項目(イベント発生日時)が入力されていません。入力してください。
   MOSJA26342,イベント発生日時は128文字以内で入力してください。
   MOSJA26343,イベント発生日時に使用できない文字が含まれています。
   MOSJA26344,必須項目(インスタンス情報)が入力されていません。入力してください。
   MOSJA26345,インスタンス情報は128文字以内で入力してください。
   MOSJA26346,インスタンス情報に使用できない文字が含まれています。
   MOSJA26347,保存されている条件名の数と入力されたGrafana項目の数が違います。もう一度お試しください。
   MOSJA26348,必須項目(Grafana項目)が入力されていません。入力してください。
   MOSJA26349,Grafana項目は128文字以内で入力してください。
   MOSJA26350,Grafana項目に使用できない文字が含まれています。
   MOSJA26351,Grafana項目に設定されていない文字が指定されています。
   MOSJA26410,監視先が設定されていません。<br />権限がある場合は、[監視先の追加]をクリックすると設定編集できます。
   MOSJA26412,ルールが削除されています。ルールを選び直してください。
   MOSJA26417,データは既に削除されています。
   MOSJA26418,必須項目(名前)が入力されていません。入力してください。
   MOSJA26419,名前は64文字以内で入力してください。
   MOSJA26420,名前に使用できない文字が含まれています。
   MOSJA26421,必須項目(API KEY)が入力されていません。入力してください。
   MOSJA26422,API KEYは48文字以内で入力してください。
   MOSJA26423,API KEYに使用できない文字が含まれています。
   MOSJA26424,APPLICATION KEYは48文字以内で入力してください。
   MOSJA26425,必須項目(APPLICATION KEY）が入力されていません。入力してください。
   MOSJA26426,APPLICATION KEYに使用できない文字が含まれています。
   MOSJA26427,必須項目(ディシジョンテーブル名)が選択されていません。選択してください。
   MOSJA26428,ディシジョンテーブル名が存在しません。ディシジョンテーブル画面からファイルをダウンロードし、ルールの設定を行ってください。
   MOSJA26429,必須項目(Datadog項目)が入力されていません。入力してください。
   MOSJA26430,Datadog項目は128文字以内で入力してください。
   MOSJA26431,Datadog項目に使用できない文字が含まれています。
   MOSJA26432,Datadog項目に設定されていない文字が指定されています。
   MOSJA26433,他のDatadogアダプタ名と重複しています。修正してください。
   MOSJA26434,URIとディシジョンテーブル名の組み合わせが重複しています。ディシジョンテーブル名を変更してください。
   MOSJA26438,編集内容を保存します。よろしいですか？
   MOSJA26439,削除すると設定されている監視基盤へのメッセージ取得を行わなくなります。保存してもよろしいですか？
   MOSJA26440,データの削除に失敗しました。
   MOSJA26441,必須項目(URI)が入力されていません。入力してください。
   MOSJA26442,URIは512文字以内で入力してください。
   MOSJA26443,URIに使用できない文字が含まれています。
   MOSJA26444,保存されている条件名の数と入力されたDatadog項目の数が違います。もう一度お試しください。
   MOSJA26445,プロキシは256文字以内で入力してください。
   MOSJA26446,プロキシに使用できない文字が含まれています。

===============================================
3 OASE アクション履歴画面で表示されるメッセージ
===============================================

| OASE アクション履歴画面で表示されるメッセージについて説明します。
| 以下の表はアクション履歴画面で表示されるメッセージの一覧です。xxxには該当項目に置換されます。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。


.. csv-table:: 表 3.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA13000,データの取得に失敗しました。しばらく経ってからもう一度お試しください。
   MOSJA13012,アクションを再実行しますがよろしいですか？
   MOSJA13013,現在実行中のため再実行できません。
   MOSJA13014,エラーが発生しました。
   MOSJA13015,アクションを承認して、処理を再開しますがよろしいですか？
   MOSJA13016,承認待ち状態ではないため、アクションを再開できません
   MOSJA13017,アクションを再実行する権限がありません。ディシジョンテーブル画面から該当ルールの権限をご確認ください。rule_type_name=xxx
   MOSJA13018,アクションを承認する権限がありません。ディシジョンテーブル画面から該当ルールの権限をご確認ください。rule_type_name=xxx
   MOSJA13020,アクションを停止しますがよろしいですか？
   MOSJA13021,アクションを停止する権限がありません。ディシジョンテーブル画面から該当ルールの権限をご確認ください。rule_type_name=xxx
   MOSJA13022,停止するアクションが見つかりませんでした。



=========================================
3 OASE ユーザ画面で表示されるメッセージ
=========================================

| OASE ユーザの画面で表示されるメッセージについて説明します。
| 以下の表はユーザ画面で表示されるメッセージの一覧です。xxxには該当項目に置換されます。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。

.. csv-table:: 表 3.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA00001,変更が破棄されますがよろしいですか？保存していない情報がある場合は、[キャンセル]をクリックし、[保存]をしてください。
   MOSJA00002,保存してよろしいですか？
   MOSJA00006,SMTPサーバーの接続情報が設定されていません。OASEインストール時の初期設定をご確認ください。
   MOSJA00007,SMTP認証情報が設定されていません。OASEインストール時の初期設定をご確認ください。
   MOSJA00008,件名が設定されていません。
   MOSJA00009,メール本文が設定されていません。
   MOSJA00010,メールの送信に失敗しました
   MOSJA24001,データ取得に失敗しました。
   MOSJA24003,対象データがありません。
   MOSJA24004,入力値が正しくありません。入力内容を確認してください。
   MOSJA24005,必須項目(ユーザ名)が入力されていません。入力してください。
   MOSJA24006,必須項目(ログインID)が入力されていません。入力してください。
   MOSJA24007,必須項目(メールアドレス)が入力されていません。入力してください。
   MOSJA24008,必須項目(グループ)が選択されていません。選択してください。
   MOSJA24009,ユーザが存在しません。Active Directoryでユーザ作成をしてください。
   MOSJA24010,ユーザが存在しません。権限がある場合は、[編集]をクリックするとユーザを作成できます。
   MOSJA24011,ユーザ名は、64byteまたは64文字以内で入力してください。
   MOSJA24012,ログインIDは、32byteまたは32文字以内で入力してください。
   MOSJA24013,メールアドレスは、256byteまたは256文字以内で入力してください。
   MOSJA24014,メールアドレスが不正です。修正してください。
   MOSJA24015,エラーが発生しました。
   MOSJA24016,存在しないグループを追加しようとしています。
   MOSJA24017,他のログインIDと重複しています。修正してください。
   MOSJA24018,他のメールアドレスと重複しています。修正してください。
   MOSJA24019,存在しないグループを削除しようとしています。
   MOSJA24020,入力情報が破棄されます。よろしいですか？
   MOSJA24021,ログインIDが不正です。使用可能文字は半角英字(大文字)、半角英字(小文字)、半角数字、記号 . @ _ -です。
   MOSJA24022,xxxに使用できない文字が含まれています。

   
3 OASE SSO設定画面で表示されるメッセージ
=========================================

| OASE SSO設定の画面で表示されるメッセージについて説明します。
| 以下の表はSSO設定画面で表示されるメッセージの一覧です。xxxには該当項目に置換されます。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。


.. csv-table:: 表 3.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA28001,SSO設定情報が存在しません。権限がある場合は、[新規追加]をクリックするとSSO設定情報を登録できます。
   MOSJA28004,データ取得に失敗しました。
   MOSJA28035,編集内容を保存します。\nよろしいですか？
   MOSJA28036,プロバイダー名は、128文字以内で入力してください。
   MOSJA28037,ロゴは、64文字以内のファイル名にしてください。
   MOSJA28038,clientidは、256文字以内で入力してください。
   MOSJA28039,clientsecretは、256文字以内で入力してください。
   MOSJA28040,authorizationuriは、256文字以内で入力してください。
   MOSJA28041,accesstokenuriは、256文字以内で入力してください。
   MOSJA28042,resourceowneruriは、256文字以内で入力してください。
   MOSJA28043,scopeは、256文字以内で入力してください。
   MOSJA28044,idは、256文字以内で入力してください。
   MOSJA28045,nameは、256文字以内で入力してください。
   MOSJA28046,emailは、256文字以内で入力してください。
   MOSJA28047,imageurlは、256文字以内で入力してください。
   MOSJA28048,proxyは、256文字以内で入力してください。
   MOSJA28049,プロバイダー名に使用できない文字が含まれています。
   MOSJA28050,プロバイダー名が重複しています。
   MOSJA28051,認証方式の値が不正です。
   MOSJA28052,ロゴに使用できない文字が含まれています。
   MOSJA28053,ロゴが重複しています。
   MOSJA28054,表示フラグの値が不正です。
   MOSJA28055,clientidに使用できない文字が含まれています。
   MOSJA28056,clientsecretに使用できない文字が含まれています。
   MOSJA28057,authorizationuriに使用できない文字が含まれています。
   MOSJA28058,accesstokenuriに使用できない文字が含まれています。
   MOSJA28059,resourceowneruriに使用できない文字が含まれています。
   MOSJA28060,scopeに使用できない文字が含まれています。
   MOSJA28061,idに使用できない文字が含まれています。
   MOSJA28062,nameに使用できない文字が含まれています。
   MOSJA28063,emailに使用できない文字が含まれています。
   MOSJA28064,imageurlに使用できない文字が含まれています。
   MOSJA28065,proxyに使用できない文字が含まれています。
   MOSJA28066,不正なリクエストです。
   MOSJA28067,他のレコードとプロバイダー名が重複しています。修正してください。
   MOSJA28068,他のレコードとロゴのファイル名が重複しています。修正してください。
   MOSJA28069,[xxx]のSSO設定情報が削除されますがよろしいですか？\n削除しない場合は、[キャンセル]をクリックしてください。
   MOSJA28070,SSO情報管理レコード削除に失敗しました。
   MOSJA28071,予期せぬエラーが発生しました。

===============================================
3 OASE アクション履歴画面で表示されるメッセージ
===============================================

| 本章では、OASE アクション履歴画面で表示されるメッセージについて説明します。
| 以下の表はアクション履歴画面で表示されるメッセージの一覧です。xxxには該当項目に置換されます。
| エラーメッセージはメッセージの最後にメッセージIDが追記されます。


.. csv-table:: 表 3.1-1 メッセージ一覧
   :header: メッセージID, メッセージ
   :widths:  20, 60

   MOSJA13000,データの取得に失敗しました。しばらく経ってからもう一度お試しください。
   MOSJA13012,アクションを再実行しますがよろしいですか？
   MOSJA13013,現在実行中のため再実行できません。
   MOSJA13014,エラーが発生しました。
   MOSJA13015,アクションを承認して、処理を再開しますがよろしいですか？
   MOSJA13016,承認待ち状態ではないため、アクションを再開できません
   MOSJA13017,アクションを再実行する権限がありません。ディシジョンテーブル画面から該当ルールの権限をご確認ください。rule_type_name=xxx
   MOSJA13018,アクションを承認する権限がありません。ディシジョンテーブル画面から該当ルールの権限をご確認ください。rule_type_name=xxx
   MOSJA13020,アクションを停止しますがよろしいですか？
   MOSJA13021,アクションを停止する権限がありません。ディシジョンテーブル画面から該当ルールの権限をご確認ください。rule_type_name=xxx
   MOSJA13022,停止するアクションが見つかりませんでした。

